--- a/scss/modules/_header.scss
+++ b/scss/modules/_header.scss
@@ -75,18 +75,28 @@
         display: flex;
         
     }
-    
+
     &__nav-item {
         padding: .5em 0;
         margin-left: 1.5em;
         transition: all 300ms ease-in;
+        
+        position: relative;
+        z-index: 100;
+    }
+    
+    &__nav-item.has-submenu::after {
+        font-family: "fontawesome";
+        content: "\f078";
+        padding-left: .3em;
+        color: $gray-darker;
     }
     
     &__nav-item:hover {
         box-shadow: inset 0 -0.1875em 0 $orange;
     }
     
-    &__nav-item:hover .header__nav-link{
+    &__nav-item:hover .header__nav-link {
         color: $orange;
     }
     
@@ -96,6 +106,45 @@
         transition: all 300ms ease-in;
     }
     
+    /**** 2nd LEVEL  ****/
+    &__nav-item ul {
+        opacity: 0;
+        visibility: hidden;
+        position: absolute;
+        top: 300%;
+        left: 0;
+        width: 15rem;
+        background-color: $gray-darker;
+        border-radius: 5px;
+        transition: all 300ms ease-out;
+    }
+    
+    &__nav-item ul li:not(:last-of-type){
+        border-bottom: 1px dotted #fff;
+    }
+    
+    &__nav-item:hover > ul {
+        opacity: 1;
+        visibility: visible;
+        top: 100%;
+    }
+    
+    &__nav-item ul a {
+        display: block;
+        padding: 1rem 1.5rem;
+        font: inherit;
+        color: #fff;
+        text-transform: uppercase;
+        transition: color 300ms ease-out;
+    }
+    
+    &__nav-item ul li:hover a {
+        color: $orange;
+    }
+    
+    &__nav-item ul li::after:hover {
+        color: $orange;
+    }
     
 }
 
