--- a/scss/modules/_hero.scss
+++ b/scss/modules/_hero.scss
@@ -2,19 +2,44 @@
 
 .hero {
     
-    height: 80vh;
+    /*height: 80vh;
     background-image: url('../../img/hero.jpg');
     background-size: cover;
-    background-attachment: fixed;
+    background-attachment: fixed;*/
     position: relative;
     
     &__wrap {
+        
+        height: 80vh;
+        background-image: url('../../img/hero.jpg');
+        background-size: cover;
+        /*background-attachment: fixed;*/
+        
         color: rgba(255,255,255,.8);
         width: 1200px;
-        position: absolute;
+        
+        
+        /*position: absolute;
         top: 50%;
         left: 50%;
-        transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);*/
+    }
+    
+    &__wrap-two {
+        
+        height: 80vh;
+        background-image: url('../../img/hero2.jpg');
+        background-size: cover;
+        /*background-attachment: fixed;*/
+        
+        color: rgba(255,255,255,.8);
+        width: 1200px;
+        
+        
+        /*position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);*/
     }
     
     &__heading {
