--- a/scss/_varMixins.scss
+++ b/scss/_varMixins.scss
@@ -7,6 +7,7 @@ $gray-dark: rgb(80,80,80);
 $gray-darker: rgb(51,51,51);
 $gray-darkest: rgb(32,32,32);
 
+$black-lighter: rgb(17,17,17);
 
 $orange: rgb(242,111,41);
 
