--- a/scss/modules/_aboutus.scss
+++ b/scss/modules/_aboutus.scss
@@ -1,8 +1,16 @@
 
+.hero__wrap-2 {
+    background-image: url('../../img/black-board.jpg');
+}
+
+/******* 1st accordion *********/
+.accordion-wrap {
+    max-width: 1280px;
+    margin: 0 auto 200px auto;
+}
 
 .apple {
-    max-width: 1280px;
-    margin: 0 auto;
+    
     height: 40vh;
     background-image: url('../../img/hightlights-bg_02.jpg');
     background-size: cover;
@@ -13,16 +21,18 @@
 
 .navlist {
     display: flex;
+    justify-content: center;
     position: absolute;
-    bottom: 0;
+    bottom: 0; 
     left: 50%;
-    transform: translateX(-50%);  
+    transform: translateX(-50%);
 }
 
 .navlist a {
+    flex-shrink: 0;
     color: #fff; 
     font-size: 1.3em;
-    padding: 2em 3em;
+    padding: 1em 5em;
     background-color: royalblue;
 }
 
@@ -61,6 +71,62 @@
     overflow: hidden;
 }
 
+#events {
+    background-image: url('../../img/black-board.jpg')
+}
+
 #news, #donations {
     background-image: url('../../img/logo.png');
 }
+
+
+/******* 2nd accordion *********/
+.accordion-wrap-2 {
+    max-width: 1280px;
+    margin: 0 auto 200px auto;
+}
+
+button.accordion {
+    transition: background-color 300ms linear;
+    background-color: whitesmoke;
+    width: 100%;
+    border: none;
+    outline: none;
+    text-align: left;
+    padding: 15px 20px;
+    font-size: 18px;
+    cursor: pointer;
+}
+
+button.accordion::after {
+    content: '\f055';
+    font-family: "fontawesome";
+    font-size: 14px;
+    float: right;
+}
+
+button.accordion.is-open::after {
+    content: "\f056";
+}
+
+button.accordion:hover, button.accordion.is-open {
+    background-color: #ddd;
+}
+
+div.accordion-content {
+    padding: 0 20px;
+    border-left: 1px solid whitesmoke;
+    border-right: 1px solid whitesmoke;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 300ms ease-in-out;
+}
+
+
+
+
+
+
+
+
+
