--- a/scss/modules/_footer.scss
+++ b/scss/modules/_footer.scss
@@ -1,21 +1,27 @@
 
 .footer {
     position: relative;
-    padding: 4em 2em;
+    padding: 2em;
     background-image: url('../../img/bg_footer.png');
     background-repeat: repeat-y;
     border-bottom: 5px solid $gray-darkest;
     
     &__wrap {
         color: $gray-light;
+        margin-bottom: 3em;
     }
     
     &__logo-wrap {
-        text-align: center;
+        margin: 1em 0;
     }
     
     &__logo {
-        display: inline-block; 
+        display: inline-block;
+    }
+    
+    &__logo img {
+        width: 70%;
+        height: auto;
     }
     
     &__main {
@@ -30,7 +36,7 @@
         color: #fff;
         font-weight: 400;
         font-size: 1.2em;
-        margin-bottom: .75em;
+        margin-bottom: 1em;
     }
     
     &__mission {
