--- a/scss/modules/_footer.scss
+++ b/scss/modules/_footer.scss
@@ -48,7 +48,7 @@
     }
     
     &__hours {
-        color: $orange;
+        color: $aqua;
         margin-bottom: .8em;
     }
     
@@ -69,17 +69,13 @@
         width: 1.2em;
         height: 1.2em;
         font-size: 1.2em !important;
-        color: $orange;
+        color: $aqua;
     }
     
     &__contact-icon.fa-envelope {
         font-size: 1em !important;
         margin-right: 1.1em;
     }
-    
-    
-    
-    
     
     &__shape {
         background-image: url('../../img/shape_bottom.png');
@@ -103,7 +99,7 @@
     }
     
     &__icon {
-        color: $orange;
+        color: $aqua;
         margin-right: .3em;
     }
     
