--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -14,6 +14,10 @@ body {
     font-size: 100%;
     font-family: 'Lato', sans-serif;
     /* font-family: 'Grand Hotel', cursive; */
+    
+    @include breakpoint (max-width 1130px) {
+        font-size: .95em;
+    }
 }
 
 section {
