--- a/scss/_varMixins.scss
+++ b/scss/_varMixins.scss
@@ -9,10 +9,13 @@ $gray-darkest: rgb(32,32,32);
 
 $black-lighter: rgb(17,17,17);
 
-$orange: rgb(242,111,41);
+$royalblue: rgb(0, 44, 128);
+$aqua: #0188cc;
+
+$red-heart: rgb(186,0,0);
 
 
-$large: 920px;
+$mobile-hamburger: 920px;
 $medium: 780px;
 $small: 560px;
 
