--- a/scss/modules/_footer.scss
+++ b/scss/modules/_footer.scss
@@ -65,16 +65,17 @@
     
     &__contact-icon {
         float: left;
-        margin-right: .75em;
+        margin-right: .25em;
         width: 1.2em;
         height: 1.2em;
         font-size: 1.2em !important;
         color: $aqua;
+        line-height: 1em;
     }
     
     &__contact-icon.fa-envelope {
         font-size: 1em !important;
-        margin-right: 1.1em;
+        margin-right: .75em;
     }
     
     &__shape {
