--- a/scss/modules/_header.scss
+++ b/scss/modules/_header.scss
@@ -1,5 +1,80 @@
 
+.hamburger-icon {
+    display: none;
+    width: 26px;
+    height: 23px;
+    cursor: pointer;
+    position: fixed;
+    top: 14px;
+    right: 16px;
+    z-index: 8000;
+    
+    @include breakpoint (max-width $mobile-hamburger) {
+        display: block;
+    }
+    
+    &::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        height: 4px;
+        border-radius: 3em;
+        background-color: #000;
+        width: 100%;
+        transition: all 550ms ease-out;
+        transform-origin: left center;
+    }
+
+    &__middle {
+        top: 50%;
+        transform: translateY(-50%);
+        height: 4px;
+        border-radius: 3em;
+        width: 100%;
+        background-color: #000;
+        position: absolute;
+        content: "";
+        transition: all 550ms ease-out;
+    }
+
+    &::after {
+        content: "";
+        position: absolute;
+        height: 4px;
+        border-radius: 3em;
+        background-color: #000;
+        width: 100%;
+        bottom: 0;
+        transition: all 550ms ease-out;
+        transform-origin: left center;
+    }
+
+}
+
+.hamburger-icon.interact {
+
+    &::before {
+       transform: rotate(45deg) scaleX(1.1);  
+        
+    }
+
+    &::after {
+        transform: rotate(-45deg) scaleX(1.1) translate(-1px, 1px);  
+    }
+
+}
+
+.hamburger-icon.interact .hamburger-icon__middle {
+   transform: translateY(-50%) scaleX(0);
+}
+
+
 .header {
+    
+    @include breakpoint (max-width $mobile-hamburger) {
+        display: none;
+    }
+    
     
     &__top-sect {
         border-top: 5px solid $gray-darker;
@@ -82,6 +157,7 @@
     &__logo-image {
         width: 15.625em;
         height: auto;
+        display: block;
     }
     
     &__nav {
@@ -182,6 +258,49 @@
     }
     
 }
+
+
+.header.sticky {
+    position: fixed;
+    top: 0; 
+    left: 0;
+    right: 0;
+    background-color: rgba(0,0,0,.6);
+    box-shadow: 0 2px 2px rgba(0,0,0,.4);
+    z-index: 1001;
+    
+    //transition: padding 350ms ease-in;
+    
+    & .header__top-sect {
+        display: none;
+    }
+    
+    & .header__logo-image {
+        width: 13.5em;
+        height: auto;
+        
+        // putting inside the sitcky class only so it will only xition on sticky menu in, not out 
+        transition: all 600ms ease-out;
+    }
+    
+    & .header__logo {
+        transform: none;
+        margin-bottom: 0;
+    }
+    
+    & .header__nav-link {
+        color: #fff;
+        
+    }
+    
+    & .header__nav-item.has-submenu::after {
+        color: #fff;
+    }
+    
+}
+
+
+
 
 .sm {
     font-size: .9em;
