btt btn and one js file

--- a/scss/modules/_cards.scss
+++ b/scss/modules/_cards.scss
@@ -107,7 +107,7 @@
     
     /* 3RD CARD START */
     &__icon-large {
-        color: $royalblue;
+        color: $royalblue !important;
         
         &::before {
             font-size: 3em;
