--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -9,10 +9,12 @@
 @import "modules/cards.scss";
 @import "modules/gallery.scss";
 @import "modules/footer.scss";
+@import "modules/btn.scss";
 
 
 
 @import "modules/aboutus.scss";
+
 
 
 
