--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -1,5 +1,6 @@
 :root {
 	box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
 *, ::before, ::after {
@@ -13,7 +14,7 @@
 body {
     font-size: 100%;
     font-family: 'Lato', sans-serif;
-    /* font-family: 'Grand Hotel', cursive; */
+    
     
     @include breakpoint (max-width 1130px) {
         font-size: .95em;
