--- a/scss/modules/_header.scss
+++ b/scss/modules/_header.scss
@@ -1,77 +1,6 @@
 
-.hamburger-icon {
-    display: none;
-    width: 26px;
-    height: 23px;
-    cursor: pointer;
-    position: fixed;
-    top: 54px;
-    right: 16px;
-    z-index: 8000;
-    
-    @include breakpoint (max-width $mobile-hamburger) {
-        display: block;
-    }
-    
-    &::before {
-        content: "";
-        position: absolute;
-        top: 0;
-        height: 4px;
-        border-radius: 3em;
-        background-color: #000;
-        width: 100%;
-        transition: all 550ms ease-out;
-        transform-origin: left center;
-    }
-
-    &__middle {
-        top: 50%;
-        transform: translateY(-50%);
-        height: 4px;
-        border-radius: 3em;
-        width: 100%;
-        background-color: #000;
-        position: absolute;
-        content: "";
-        transition: all 550ms ease-out;
-    }
-
-    &::after {
-        content: "";
-        position: absolute;
-        height: 4px;
-        border-radius: 3em;
-        background-color: #000;
-        width: 100%;
-        bottom: 0;
-        transition: all 550ms ease-out;
-        transform-origin: left center;
-    }
-
-}
-
-.hamburger-icon.interact {
-
-    &::before {
-       transform: rotate(45deg) scaleX(1.1);  
-        
-    }
-
-    &::after {
-        transform: rotate(-45deg) scaleX(1.1) translate(-1px, 1px);  
-    }
-
-}
-
-.hamburger-icon.interact .hamburger-icon__middle {
-   transform: translateY(-50%) scaleX(0);
-}
-
-
 .header {
-    
-    
+       
     &__top-sect {
         border-top: 5px solid $gray-darker; 
     }
@@ -131,7 +60,7 @@
         padding: 1em 0;
         
         @include breakpoint (max-width 840px) {
-            right: 12em;
+            right: 13.5em;
         }
         
     }
@@ -146,8 +75,6 @@
             display: none;
         }
     }
-    
-    
     
     &__top-bar-icon {
        color: $aqua;
@@ -183,14 +110,6 @@
         display: block;
     }
     
-    &__nav {
-        
-        @include breakpoint (max-width $mobile-hamburger) {
-            display: none;
-        }
-        
-    }
-    
     &__nav-list {
         display: flex;
     }
@@ -209,7 +128,6 @@
     &__nav-item.has-submenu::after {
         font-family: "fontawesome";
         content: "\f078";
-        padding-left: .3em;
         color: $gray-darker;
     }
     
@@ -237,7 +155,7 @@
     &__nav-link {
         
         font-size: .95em;
-        
+        letter-spacing: .05em;
         color: $gray-darker;
         text-transform: uppercase;
         transition: all 300ms ease-in;
@@ -308,8 +226,6 @@
     box-shadow: 0 2px 2px rgba(0,0,0,.4);
     z-index: 1001;
     
-    //transition: padding 350ms ease-in;
-    
     & .header__top-sect {
         display: none;
     }
@@ -332,84 +248,229 @@
         
     }
     
-    /*& .header__nav-link.clicked {
-        color: $royalblue;
-        
-    }*/
-    
     & .header__nav-item.has-submenu::after {
         color: #fff;
     }
     
 }
 
-@include breakpoint (max-width $mobile-hamburger) {
-
-    .header.hamburger-on {
-
-        & .header__nav {
-            display: block;
-        }
-
-        & .header__main-sect {
-            display: block; 
-        }
-
-        & .header__nav-list {
-            display: flex;
-            flex-wrap: wrap;
-        }
-
-        & .header__nav-item {
-            flex: 1 0 17em;
-            margin-left: 0;
-            padding: .75em 0;
-            background-color: $royalblue; 
-        }
-
-        & .header__nav-item:not(:last-of-type) {
-            border-bottom: 1px dotted #fff;
-            border-right: 1px dotted #fff;
-        }
-
-        & .header__nav-item {
-            text-align: center;
-        }
-
-        & .header__nav-item.has-submenu::after {
-            color: #fff;
-        }
-
-        & .header__nav-item:hover {
-            box-shadow: none;
-            background-color: $aqua;
-        }
-
-        & .header__nav-item:hover .header__nav-link {
-            color: #fff;
-        }
-
-        & .header__nav-link {
-            color: #fff;
-
-        }
-
-    }
-
-}
-
-.header.sticky.hamburger-on .header__logo-image {
-    margin: 0 auto;
-}
-
-.header.sticky.hamburger-on .header__nav-item.clicked-parent {
-    background-color: $aqua;
-    box-shadow: none;
-}
-
 
 .sm {
     font-size: .9em;
+}
+
+
+
+.navigation__checkbox {
+    display: none;
+}
+
+@include breakpoint (max-width $mobile-hamburger) {
+
+    .navigation__button {
+        background-color: #333;
+        height: 50px;
+        width: 50px;
+        border-radius: 50%;
+        position: fixed;
+        top: 40px;
+        right: 25px;
+        z-index: 2000;
+        box-shadow: 0 1.5em 2em rgba(#000, .1);
+        text-align: center;
+        cursor: pointer;
+    }
+
+    .navigation__background {
+        height: 40px;
+        width: 40px;
+        border-radius: 50%;
+        position: fixed;
+        top: 45px;
+        right: 30px;
+        background-image: radial-gradient(rgba($royalblue, .8), rgba($aqua, .8));
+        z-index: 1000;
+
+        transition: transform 800ms cubic-bezier(.86, 0, .07, 1);
+    }
+
+    .header__nav {
+        height: 100vh;
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: 1500;
+
+        //transition: all 800ms cubic-bezier(.68, -.55, .265, 1.55);
+        opacity: 0;
+
+        /* use transform instead for a smoother animation and also more performant  */
+        transform: translateX(-800px);
+
+        /* put the width 100% here  */
+        width: 100%;
+    }
+
+
+    .header__nav-list {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        text-align: center;
+
+        // changing from display: flex
+        display: block;
+    }
+
+    .header__nav-item.clicked-parent {
+        box-shadow: none;
+        background-color: #333;
+        transition: all 300ms ease-out;
+    }     
+
+    .header__nav-item {
+        margin-bottom: .5em;
+        margin-top: .5em;
+        margin-left: 0 !important;
+        
+        padding: .75em 1em;
+        
+        background-color: #fff;
+        
+        transition: all 300ms ease-out;
+    } 
+    
+    .header__nav-item:hover {
+        
+        transform: translateX(.75em);
+        background-color: #333;
+    }
+    
+    .header__nav-item:hover {
+        box-shadow: none;
+    }
+    
+    .header__nav-item:hover .header__nav-link {
+        color: #fff;
+    }
+    
+    .header__nav-item.has-submenu::after {
+        color: $royalblue;
+    }
+    
+    .header__nav-item.has-submenu:hover::after {
+        color: #fff;
+    }
+
+    .header__nav-link.clicked {
+        color: #fff;
+        transition: all 300ms ease-out;
+    }
+
+    .header__nav-link {
+        color: $royalblue;
+        transition: all 300ms ease-out;
+    }
+
+    .navigation__checkbox:checked ~ .navigation__background {
+        transform: scale(70);
+    }
+
+    .navigation__checkbox:checked ~ .header__nav {
+        opacity: 1;
+        transform: translateX(0);
+
+        transition: all 800ms cubic-bezier(.68, -.55, .265, 1.55);
+    }
+    
+    .header.sticky .navigation__checkbox:checked ~ .header__nav .header__nav-link.clicked {
+        color: #fff;
+    }
+    
+    .header.sticky .navigation__checkbox:checked ~ .header__nav .header__nav-link {
+        color: $royalblue;
+    }
+    
+    .navigation__checkbox:checked ~ .header__nav .header__nav-link.clicked {
+        color: #fff;
+    }
+    
+    .navigation__checkbox:checked ~ .header__nav .header__nav-link.clicked {
+        color: #fff;
+    }
+    
+    .header.sticky .navigation__checkbox:checked ~ .header__nav .header__nav-item:hover .header__nav-link  {
+        color: #fff;
+    }
+    
+    .header.sticky .navigation__checkbox:checked ~ .header__nav .header__nav-item.has-submenu::after {
+        color: $royalblue;
+    }
+    
+    .navigation__checkbox:checked ~ .header__nav .header__nav-item.clicked-parent.has-submenu::after  {
+        color: #fff;
+    }
+    
+    .header.sticky .navigation__checkbox:checked ~ .header__nav .header__nav-item.clicked-parent.has-submenu::after  {
+        color: #fff;
+    }
+    
+    .header.sticky .navigation__checkbox:checked ~ .header__nav .header__nav-item.has-submenu:hover::after {
+        color: #fff;
+    }
+    
+    .navigation__checkbox:checked ~ .header__nav .header__nav-item.has-submenu:hover > ul {
+        opacity: 0;
+        visibility: hidden;
+        top: 300%;
+    }
+
+    .navigation__icon {
+        position: relative;
+        margin-top: 1.55em;
+        
+        &, &::before, &::after {
+             width: 1.6em;
+             height: 2px;
+             background-color: #fff;
+             display: inline-block;
+        } 
+        
+        &::before, &::after {
+            content: "";
+            position: absolute;
+            transition: all 400ms;
+            left: 0;
+        }
+        
+        &::before { transform: translateY(-.45em); }
+        &::after { transform: translateY(.45em); }
+    }
+    
+    .navigation__button:hover .navigation__icon::before {
+        transform: translateY(-.55em);
+    }
+    
+    .navigation__button:hover .navigation__icon::after {
+        transform: translateY(.55em);
+    }
+    
+    .navigation__checkbox:checked + .navigation__button .navigation__icon {
+        background-color: transparent;
+    }
+    
+    .navigation__checkbox:checked + .navigation__button .navigation__icon::before {
+        transform: translateY(0) rotate(135deg);
+    }
+    
+    .navigation__checkbox:checked + .navigation__button .navigation__icon::after {
+        transform: translateY(0) rotate(-135deg);
+    }
+    
+    
+
+
 }
 
 
