--- a/scss/modules/_footer.scss
+++ b/scss/modules/_footer.scss
@@ -106,6 +106,11 @@
     &__icon {
         color: $aqua;
         margin-right: .3em;
+        
+        &::before {
+            font-size: 1.25em;
+        }
+        
     }
     
     
