--- a/scss/modules/_hero.scss
+++ b/scss/modules/_hero.scss
@@ -1,30 +1,22 @@
 
 
 .hero {
-    
-    /*height: 80vh;
-    background-image: url('../../img/hero.jpg');
-    background-size: cover;
-    background-attachment: fixed;*/
+
     position: relative;
     
-    &__wrap {
-        
+    &__wrap {    
         height: 80vh;
-        background-image: url('../../img/hero.jpg');
+        background-image: linear-gradient(to bottom, rgba(0,0,0,.4), rgba(0,0,0,.4)), url('../../img/hero.jpg');
         background-size: cover;
         /*background-attachment: fixed;*/
         
         color: rgba(255,255,255,.8);
-        width: 1200px;
-        
-        
+        width: 1200px; 
         position: relative;
         
     }
     
     &__wrap-two {
-        
         height: 80vh;
         background-image: url('../../img/hero2.jpg');
         background-size: cover;
@@ -32,12 +24,16 @@
         
         color: rgba(255,255,255,.8);
         width: 1200px;
+    }
+    
+    &__wrap-three {
+        height: 80vh;
+        background-image: url('../../img/hero3.jpg');
+        background-size: cover;
+        /*background-attachment: fixed;*/
         
-        
-        /*position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);*/
+        color: rgba(255,255,255,.8);
+        width: 1200px;
     }
     
     &__center {
