updated one img path to fix gh no imgs

--- a/scss/modules/_header.scss
+++ b/scss/modules/_header.scss
@@ -11,7 +11,7 @@
     }
     
     &__top-bar {
-        background: url('../../img/cner-536.png') no-repeat top center;
+        background: url('../img/cner-536.png') no-repeat top center;
         
         height: 39px;
         width: 536px;
