--- a/scss/modules/_header.scss
+++ b/scss/modules/_header.scss
@@ -36,7 +36,7 @@
         }
         
         @include breakpoint (max-width 840px) {
-            background: url('../../img/cner-301.png') no-repeat top center;
+            background: url('../img/cner-301.png') no-repeat top center;
             right: -57vw;
             width: 301px;
         }
