index page updates

--- a/scss/_varMixins.scss
+++ b/scss/_varMixins.scss
@@ -9,7 +9,7 @@ $gray-darkest: rgb(32,32,32);
 
 $black-lighter: rgb(17,17,17);
 
-$royalblue: rgb(0, 44, 128);
+$royalblue: hsl(219, 70%, 35%);
 $aqua: #0188cc;
 
 $red-heart: rgb(186,0,0);
