--- a/scss/modules/_cards.scss
+++ b/scss/modules/_cards.scss
@@ -1,11 +1,17 @@
 
 
 .cards {
-    background-color: $gray-lighter;
+    background-color: lighten($gray-lighter, 5%);
+    
+    
+    &__main-wrap {
+        max-width: 1280px;
+        margin: 0 auto;
+    }
     
     &__grid {
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(315px, 1fr));
+        grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
         grid-gap: 2em;
         align-items: center;
     }
@@ -67,8 +73,24 @@
         flex-direction: column;
     }
     
+    &__icon {
+        color: $royalblue; 
+        align-self: center;
+        
+        &::before {
+           margin: 0 !important;
+           font-size: 3em !important;
+        
+        }
+    }
     
-    
+    &__icon.flaticon-kindergarten {
+        &::before {
+           margin: 0 !important;
+           font-size: 3.2em !important;
+        
+        }
+    }
     
     
     /* 3RD CARD START */
@@ -106,14 +128,24 @@
     
     &__subheading-brush--2 {
         &::after {
-            background-color: red;
+            background-color: rgb(76, 114, 150);
         }
     }
     
     &__subheading-brush--3 {
         &::after {
-            background-color: green;
+            background-color: rgb(172, 193, 88);
         }
+    }
+    
+    &__subheading-brush-span--1, &__subheading-brush-span--2, &__subheading-brush-span--3 {
+        font-weight: 700;
+    }
+    
+    &__subheading-brush-span--4, &__subheading-brush-span--5, &__subheading-brush-span--6{
+        font-family: 'Grand Hotel';
+        line-height: 1;
+        font-size: 1.6em;
     }
     
     
@@ -150,7 +182,7 @@
     /**************************************/
     &__grid-2 {
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+        grid-template-columns: repeat(auto-fit, minmax(325px, 1fr));
         grid-gap: 2em;
         align-items: center;
         margin-top: 4em;
@@ -161,10 +193,6 @@
         overflow: hidden;
         background-color: #fff;
         border-radius: 10px;
-        /**************************************/
-        /*background-image: url('../../img/about1.jpg');
-        background-repeat: no-repeat;
-        background-size: cover;*/
     }
     
     &__subheading-2 {
@@ -181,31 +209,39 @@
     }
     
     &__content-2 {
-        background-color: darkred;
+        background-color: rgba(141,198,63,.9);;
+        //position: relative;
+    }
+    
+    &__content-wrap {
         position: relative;
     }
     
     &__svg-overlay {
         position: absolute;
-        bottom: 303px;
+        //bottom: 303px;
+        //left: 0;
+        
+        top: -80px;
         left: 0;
+        
         width: 100%;
         height: 80px;
         z-index: 2;
         pointer-events: none;
-        color: red;
+        color: rgba(141,198,63,.9);
     }
     
     &__svg-overlay svg {
         width: 100%;
         height: 100%;
-        fill: green;
+        fill: currentColor;
     }
     
     &__content-wrap {
         position: absolute;
         bottom: 0;
-        background-color: green;
+        background-color: rgba(141,198,63,.9);
         padding: 2em;
         padding-top: 1em;
         color: #fff;
@@ -232,11 +268,6 @@
     &__btn-2 {
         margin-top: 2em;
         align-self: center;
-    }
-    
-    &__wrap-2:hover &__content-2 {
-        
-        
     }
     
 }
