added contact us form

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -10,6 +10,7 @@
 @import "modules/gallery.scss";
 @import "modules/footer.scss";
 @import "modules/btn.scss";
+@import "modules/contact.scss";
 
 
 
