--- a/scss/modules/_cards.scss
+++ b/scss/modules/_cards.scss
@@ -116,7 +116,7 @@
             max-width: 274px; 
             width: 100%;
             display: inline-block;
-            background-image: url('../../img/footer_title_bg.png');
+            background-image: url('../img/footer_title_bg.png');
             background-position: left bottom;
             background-repeat: no-repeat;
             bottom: 0;
