--- a/scss/modules/_contact.scss
+++ b/scss/modules/_contact.scss
@@ -207,3 +207,12 @@ textarea {
 
 
 
+/* Set the size of the div element that contains the map */
+#map {
+  height: 400px;  /* The height is 400 pixels */
+  width: 100%;  /* The width is the width of the web page */
+ }
+
+
+
+
