--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -10,11 +10,17 @@
 @import "modules/gallery.scss";
 @import "modules/footer.scss";
 @import "modules/btn.scss";
-@import "modules/contact.scss";
-
 
 
 @import "modules/aboutus.scss";
+@import "modules/contact.scss";
+@import "modules/curriculum.scss";
+@import "modules/program.scss";
+@import "modules/calendar.scss";
+@import "modules/forms.scss";
+
+
+
 
 
 
