--- a/scss/modules/_footer.scss
+++ b/scss/modules/_footer.scss
@@ -3,7 +3,7 @@
     position: relative;
     padding: 2em;
     background-image: url('../img/bg_footer.png');
-    background-repeat: repeat-y;
+    background-repeat: repeat;
     border-bottom: 5px solid $gray-darkest;
     
     &__wrap {
@@ -37,17 +37,13 @@
     
     &__subheading {
         color: #fff;
-        font-weight: 400;
+        font-weight: 300;
         font-size: 1.2em;
         margin-bottom: 1em;
     }
     
     &__mission {
         line-height: 1.5;
-    }
-    
-    &__days {
-        
     }
     
     &__hours {
