--- a/scss/modules/_hero.scss
+++ b/scss/modules/_hero.scss
@@ -75,10 +75,29 @@
     background-color: $royalblue;
     padding: 1em 2em;
     border-radius: 99em;
-    transition: background-color 300ms ease-out;
+    transition: all 300ms ease-out;
     
     &:hover {
         background-color: lighten($royalblue, 10%);
     }
     
+}
+
+
+
+
+.cards__btn-2:link, .cards__btn-2:visited {
+    background-color: transparent;
+    border: 1px solid #fff;
+    box-shadow: 1px 1px 2px rgba(0,0,0,.4)
+}
+
+.cards__btn-2:hover {
+    background-color: transparent !important;
+    color: darken(#fff, 20%);
+    border-color: darken(#fff, 20%);
+}
+
+.cards__btn-2:active {
+    transform: translate(1px, 2px);
 }
