--- a/scss/modules/_btn.scss
+++ b/scss/modules/_btn.scss
@@ -19,7 +19,19 @@
     
     // trying to fix btn not showing on mobile
     z-index: 9500;
+
+    &-icon {
+        fill: #fff;
+        width: 1em;
+        height: 1em;
+        transform: translateY(5px);
+        transition: fill 300ms ease-in;
+    }
     
+    &:hover &-icon {
+        fill: $aqua;
+    }
+
     &.active {
         opacity: 1;
         bottom: 1.5em;
@@ -28,10 +40,6 @@
     
     &:hover {
         background-color: rgba(0,0,0,1);
-    }
-    
-    &:hover {
-        color: #eee;
     }
     
 }
