--- a/scss/modules/_header.scss
+++ b/scss/modules/_header.scss
@@ -86,24 +86,16 @@
         }
     }
     
-    &__top-bar-icon {
-        color: $aqua;
-        margin-right: .3em;
-        
-        @include breakpoint (max-width 615px) {
-            margin-right: .1em;
-        }
+    &__top-bar-item {
+        display: flex;
+        align-items: center;
     }
     
-    &__top-bar-icon.fa-phone::before {
-        font-size: 1.25em;
-        display: inline-block;
-        transform: translateY(.1em);
-        
-        @include breakpoint (max-width 615px) {
-            font-size: 1.1em;
-            transform: translateY(.2em);
-        }
+    &__top-bar-icon {
+        fill: $aqua;
+        margin-right: .3em;
+        width: 1.2em;
+        height: 1.2em;
     }
     
     /* phone icon text  */
@@ -179,10 +171,10 @@
         margin-left: 1em;
     }
     
-    &__nav-item.has-submenu::after {
-        font-family: "fontawesome";
-        content: "\f078";
-        color: $gray-darker;
+    &__nav-icon {
+        fill: $gray-darker;
+        width: 1em;
+        height: 1em;
     }
     
     &__nav-item:hover {
